design4 issue of overflowing on more projects has been solved

--- a/design4/css/style.css
+++ b/design4/css/style.css
@@ -56,28 +56,6 @@ body{
 body {
   overflow-x: hidden;
 }
-.userNameOuter{
-  width: 100%;
-  height: 100%;
-  background: url("https://giantsmeet.s3.ap-south-1.amazonaws.com/16307635750949308936d9f70b2acf12dba30c422bb68.png");
-  background-position: center;
-  /* background-clip: border-box; */
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-
-@media (max-width: 400px) {
-  .userNameOuter {
-    background: url("https://giantsmeet.s3.ap-south-1.amazonaws.com/16307643062975cf8384ed6e56371ca73b2f8f824f2eb.png");
-    background-position: center;
-    /* background-clip: border-box; */
-    background-size: auto;
-    background-repeat: no-repeat;
-  }
-}
-
-
 .userName {
   display: flex;
   align-items: center;
@@ -85,24 +63,14 @@ body {
   flex-direction: column;
   height: 100vh;
   position: relative;
-  background-color: rgba(0, 0, 0, 0.58);
+  background: url("https://giantsmeet.s3.ap-south-1.amazonaws.com/16307635750949308936d9f70b2acf12dba30c422bb68.png");
+  color: white;
 }
 
 .userName h1 {
-  background-color: transparent;
-  color: white;
-  opacity: 1!important;
   font-size: 8rem;
   font-family: "Quentin";
   text-align: center;
-}
-
-.profession{
-  word-spacing: 1.2px;
-  letter-spacing: 7px;
-  text-align: center;
-  color: white;
-  opacity: .75;
 }
 
 /* Button box */
@@ -117,37 +85,35 @@ body {
 }
 
 .middlebg {
-  height: 37rem;
+  height: 50rem;
 }
 
 .bottombg {
-  height: 6.5rem;
+  height: 9.5rem;
+  position: absolute;
+  bottom: -5px;
+  z-index: -3;
 }
 
 /* Images */
 .images {
-  max-height: 47rem;
-  /* width: 70%; */
-  top: 12%;
-  /* margin: auto; */
-  left: 7%;
-  right: 7%;
+  width: 90%;
+  margin: auto;
+  top: -5rem;
   background-color: white;
 }
 
 .images img {
   transition: all 0.3s ease-in-out;
   cursor: pointer;
-  opacity: 0.85;
 }
 .images img:hover {
   transform: scale(1.01);
-  opacity: 1;
 }
 /* Contact */
 .contact {
   max-height: 120vh;
-  padding: 0rem 6rem 2rem 4rem;
+  padding: 2rem 6rem 2rem 4rem;
 }
 .box {
   /* border: 1px solid white; */
@@ -215,15 +181,6 @@ body {
   .userName {
     background-position: center;
   }
-
-  .userName h1{
-    font-size: 3.5rem;
-  }
-
-  .profession{
-    font-size: 1.2rem;
-    letter-spacing: 9px;
-  }
 }
 @media (max-width: 550px) {
   html {
@@ -241,7 +198,7 @@ body {
     right: 4%;
   }
   .contact {
-    padding: 0rem 1rem 1rem 1rem;
+    padding: 1rem;
   }
 }
 @media (max-width: 350px) {
